--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "chess.js": "^0.12.0",
+    "chessboardjs-vue": "^1.0.9",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-modal-dialogs": "^3.0.0",
     "vue-router": "^3.5.3",
     "vuetify": "^2.4.0"
   },
