--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,11 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
+
+cockroach.zip
+
+cockroach/cockroach-v21.2.3.windows-6.2-amd64/cockroach.exe
+
+cockroach/cockroach-v21.2.3.windows-6.2-amd64/lib/libgeos_c.dll
+
+cockroach/cockroach-v21.2.3.windows-6.2-amd64/lib/libgeos.dll
