--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,34 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
 .DS_Store
-node_modules
-/dist
+*.pem
 
-
-# local env files
-.env.local
-.env.*.local
-
-# Log files
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
 
-# Editor directories and files
-.idea
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# local env files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-cockroach.zip
-
-cockroach/cockroach-v21.2.3.windows-6.2-amd64/cockroach.exe
-
-cockroach/cockroach-v21.2.3.windows-6.2-amd64/lib/libgeos_c.dll
-
-cockroach/cockroach-v21.2.3.windows-6.2-amd64/lib/libgeos.dll
+# vercel
+.vercel
