--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "old-dev": "next dev",
+    "dev":"node server.js",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.5",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
