--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "private": true,
   "scripts": {
-    "old-dev": "next dev",
-    "dev":"node server.js",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
     "@heroicons/react": "^1.0.5",
+    "@magic-sdk/admin": "^1.3.4",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "use-magic-link": "^1.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
