--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "@hapi/iron": "6.0.0",
     "@heroicons/react": "^1.0.5",
     "@magic-sdk/admin": "^1.3.4",
+    "cookie": "0.4.0",
+    "magic-sdk": "1.0.1",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "tailwind-scrollbar-hide": "^1.1.7",
-    "use-magic-link": "^1.1.1"
+    "swr": "0.5.5",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
