--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "magic-sdk": "1.0.1",
     "next": "latest",
     "react": "^17.0.2",
+    "react-chessground": "^1.5.0",
     "react-dom": "^17.0.2",
     "swr": "0.5.5",
     "tailwind-scrollbar-hide": "^1.1.7"
