--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@hapi/iron": "6.0.0",
+    "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.5",
     "@magic-sdk/admin": "^1.3.4",
     "cookie": "0.4.0",
