--- a/package.json
+++ b/package.json
@@ -12,13 +12,9 @@
     "@magic-sdk/admin": "^1.3.4",
     "cookie": "0.4.0",
     "magic-sdk": "1.0.1",
-    "next": "latest",
-    "next-chess-board": "^0.4.9",
     "react": "^17.0.2",
     "react-chessground": "^1.5.0",
-    "react-dom": "^17.0.2",
-    "swr": "0.5.5",
-    "tailwind-scrollbar-hide": "^1.1.7"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
