--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.5",
     "@magic-sdk/admin": "^1.3.4",
+    "next": "latest",
     "cookie": "0.4.0",
     "magic-sdk": "1.0.1",
     "react": "^17.0.2",
