--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.5",
     "@magic-sdk/admin": "^1.3.4",
-    "next": "latest",
     "cookie": "0.4.0",
     "magic-sdk": "1.0.1",
+    "next": "latest",
     "react": "^17.0.2",
     "react-chessground": "^1.5.0",
+    "swr": "0.5.5",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
