--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "next": "latest",
     "react": "^17.0.2",
     "react-chessground": "^1.5.0",
-    "swr": "0.5.5",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-timer-hook": "^3.0.5",
+    "swr": "0.5.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
