--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-chessground": "^1.5.0",
     "react-dom": "^17.0.2",
     "react-timer-hook": "^3.0.5",
-    "swr": "0.5.5"
+    "swr": "0.5.5",
+    "use-sound": "^4.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
