--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "@heroicons/react": "^1.0.5",
     "@magic-sdk/admin": "^1.3.4",
     "cookie": "0.4.0",
+    "firebase": "^9.6.2",
     "magic-sdk": "1.0.1",
     "next": "latest",
     "react": "^17.0.2",
     "react-chessground": "^1.5.0",
     "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^4.0.1",
+    "react-firebaseui": "^6.0.0",
     "react-timer-hook": "^3.0.5",
     "swr": "0.5.5",
     "use-sound": "^4.0.1"
