--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@magic-sdk/admin": "^1.3.4",
     "cookie": "0.4.0",
     "firebase": "^9.6.2",
+    "lodash.debounce": "^4.0.8",
     "magic-sdk": "1.0.1",
     "next": "latest",
     "react": "^17.0.2",
