--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@hapi/iron": "6.0.0",
     "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.5",
+    "firebase": "^9.6.2",
     "next": "latest",
     "react": "^17.0.2",
     "react-chessground": "^1.5.0",
     "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^4.0.1",
     "react-timer-hook": "^3.0.5",
     "swr": "0.5.5",
     "use-sound": "^4.0.1"
