--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.5",
     "@magic-sdk/admin": "^1.3.4",
+    "axios": "^0.24.0",
     "cookie": "0.4.0",
     "firebase": "^9.6.2",
     "lodash.debounce": "^4.0.8",
