--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-chessground": "^1.5.0",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^4.0.1",
+    "react-hotjar": "^4.0.0",
     "react-select": "^5.2.2",
     "react-timer-hook": "^3.0.5",
     "swr": "0.5.5",
