--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "axios": "^0.24.0",
     "file-saver": "^2.0.5",
     "firebase": "^9.6.2",
+    "multiparty": "^4.2.3",
     "next": "latest",
+    "next-connect": "^0.12.2",
     "react": "^17.0.2",
     "react-chessground": "^1.5.0",
     "react-dom": "^17.0.2",
