--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^1.0.5",
+    "@vercel/analytics": "^1.0.1",
     "axios": "^1.4.0",
     "file-saver": "^2.0.5",
     "firebase": "^9.22.1",
